# vm-superio

./: .gitmodules  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  coverage_config_aarch64.json  coverage_config_x86_64.json
.cargo/: audit.toml
.github/workflows/: publish-vm-superio-ser.yaml  publish-vm-superio.yaml
crates/vm-superio/: CHANGELOG.md  Cargo.toml
crates/vm-superio-ser/: CHANGELOG.md  Cargo.toml
crates/vm-superio-ser/src/: lib.rs  rtc_pl031.rs  serial.rs
crates/vm-superio/src/: i8042.rs  lib.rs  rtc_pl031.rs  serial.rs
src/: i8042.rs  lib.rs  rtc_pl031.rs  serial.rs
vm-superio/: CHANGELOG.md  Cargo.toml
vm-superio-ser/: CHANGELOG.md  Cargo.toml
vm-superio-ser/src/: lib.rs  rtc_pl031.rs  serial.rs
vm-superio/src/: i8042.rs  lib.rs  rtc_pl031.rs  serial.rs
